--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
 
             <div class="header-search">
-                <input type="text" placeholder="Nhập từ khóa" class="header-search_input" onchange="search()">
+                <input type="text" placeholder="Nhập từ khóa" class="header-search_input" oninput="search()">
                 <button class="header-search_btn" onclick="search()">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
